--- a/app/src/main/res/layout/spa_card.xml
+++ b/app/src/main/res/layout/spa_card.xml
@@ -6,34 +6,104 @@
     app:cardCornerRadius="20dp"
     app:cardElevation="6dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+
         android:background="@color/darkGreen"
-        android:paddingBottom="12dp">
+
+        >
 
         <ImageView
             android:id="@+id/serviceImage"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="220dp"
             android:scaleType="centerCrop"
-
             android:src="@drawable/home_banner"/>
 
-        <TextView
-            android:id="@+id/serviceName"
-            android:layout_width="wrap_content"
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:padding="20dp"
-            android:text="Service Name"
+            android:layout_marginBottom="20dp"
+            android:layout_marginHorizontal="20dp"
+            app:cardCornerRadius="20dp"
+            android:layout_marginTop="180dp"
+            app:cardElevation="6dp">
 
-            android:textSize="18sp"
-            android:textColor="@color/white"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="260dp"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:background="@color/lightGrey">
 
-            android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/serviceName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerInParent="true"
+                    android:layout_marginTop="10dp"
+                    android:letterSpacing="0.08"
+                    android:padding="10dp"
+                    android:text="Swadeshi Massage"
+                    android:textColor="@color/darkGreen"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/serviceName2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:textAlignment="center"
+                    android:letterSpacing="0.09"
+                    android:text="A relaxing full-body massage using long strokes and kneading to relieve tension and improve circulation."
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentTop="true"
+                    android:textSize="14sp"
+                    android:textColor="@color/darkGreen"
+                    />
+
+                <TextView
+                    android:id="@+id/serviceName3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:textAlignment="center"
+                    android:layout_marginBottom="5dp"
+                    android:letterSpacing="0.09"
+                    android:text="Price: $50/1 hr"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentTop="true"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/darkGreen"
+                    />
+
+                <Button
+                    android:id="@+id/locationButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginHorizontal="50dp"
+                    android:layout_marginTop="10dp"
+                    android:letterSpacing="0.1"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounded_green_button"
+                    android:text="Book Now"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:backgroundTint="@color/jungleGreen" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
