--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/homeScreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/customGrey"
-    android:gravity="top"
-    android:orientation="vertical"
-    tools:context=".HomeActivity">
+    tools:context=".HomeActivity"
+    tools:openDrawer="start">
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/menu_header"
+        app:menu="@menu/top_menu" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/customGrey"
+        android:gravity="top"
+        android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -23,13 +36,25 @@
             android:src="@drawable/home_bg"
             />
 
+        <ImageView
+            android:id="@+id/menuIcon"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="?android:attr/actionBarSize"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/menu_icon"
+            />
+
 
         <ImageView
             android:id="@+id/icon3"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/imageView2"
             android:layout_centerInParent="true"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="20dp"
             app:srcCompat="@drawable/horizontal_logo" />
 
     </RelativeLayout>
@@ -101,4 +126,7 @@
         app:itemTextColor="@color/white"
         app:itemActiveIndicatorStyle="@style/MenuItemIndicator"
         app:shapeAppearanceOverlay="@style/TopCornerRound"/>
-</LinearLayout>
+    </LinearLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
+
